--- a/gb/20/2/24/n11893305.md
+++ b/gb/20/2/24/n11893305.md
@@ -1,14 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dmoadz208/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dmoadz208/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dmoadz208/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>共产党亡党倒数时刻 习率政治局集体露面</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2fd5b58f8b411218a330f5f286d20e37-600x400.jpg" />
-<h6>2月23日，习近平率所有政治局常委和委员，集体露面。画面中，坐成一排的七位常委都没戴口罩，对面的几十位委员和其他官员，全部戴着口罩。（影片截图）
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>疫情下面临严重危机  习率政治局集体露面</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/000_1O82SL-600x400.jpg" />
+<h6>2020年2月23日，习近平率所有政治局常委和委员召开会议，“统筹推进新冠肺炎疫情防控和经济社会发展工作部署”，这是武汉肺炎全面爆发后首次七常委集体露面，突显新型冠状病毒疫情及大陆经济面临严重危机。 (NICOLAS ASFOURI/AFP)
 </h6>
 <hr>
-<p>【大纪元2020年02月25日讯】（大纪元记者林哲香港报导）2月23日，中共在北京开了名为“统筹推进新冠肺炎疫情防控和经济社会发展工作部署”的会议，<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md">习近平</a>率所有政治局常委和委员，集体露面。这是<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>全面爆发后首次七常委集体露面，突显新型冠状病毒疫情及大陆经济面临严重危机。此外，武汉肺炎病毒扩散全球，香港资深作家兼传媒人陶杰认为，世界现在正面临“《圣经》时刻”。</p>
-<p>有评论指出，中共最高层集体露面，可以看作是对连日来外界传闻，中共高层多人被<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>病毒击倒的回应。</p>
+<p>【大纪元2020年02月25日讯】（大纪元记者林哲香港报导）2月23日，中共在北京开了名为“统筹推进新冠肺炎疫情防控和经济社会发展工作部署”的会议，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>率所有政治局常委和委员，集体露面。这是<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>全面爆发后首次七常委集体露面，突显新型冠状病毒疫情及大陆经济面临严重危机。此外，武汉肺炎病毒扩散全球，香港资深作家兼传媒人陶杰认为，世界现在正面临“《圣经》时刻”。</p>
+<p>有评论指出，中共最高层集体露面，可以看作是对连日来外界传闻，中共高层多人被<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>病毒击倒的回应。</p>
 <p>值得注意的是，在画面中，坐成一排的七位政治局常委都没有戴口罩，而对面的几十位政治局委员和其他官员，全部戴着口罩。</p>
+<p><a src=""></a><a href="https://git.io/JvPbi"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/2A_QR2Ia3X0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>会议释放八大重要信息</h2>
 <p>时事评论员夏小强认为，这次会议主要释放了八大重要信息。</p>
 <p>第一、疫情已经全面失控，对于中共来讲，这次疫情的发展，将会决定中共政权的生死；</p>
@@ -20,18 +21,8 @@
 <p>第七、启动战时和危机时期的超限维稳机制和手段，不惜一切代价维护中共政权稳定，碾压所有可能的民变和反抗；</p>
 <p>第八、疫情对大陆经济的冲击，将会是致命的和长期的，失业加剧，民众的基本生活保障面临困局，外贸和外资的基本盘正在失去。</p>
 <p>资深新闻工作者石山则指，该会议透露中共高层达成妥协，即有复工推动经济的总要求，但同时授权给地方政府自行决定。另一方面，这个会议设立了众多的“分会场”，通过视频连结到大陆大量的“县团级机构”，突显北京不满部委和省级传达中央意图不及时、不充分，造成过去一个多月的政令混乱。</p>
-<p>夏小强亦评价，从<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md">习近平</a>的讲话中可以看到，中共的大厦将倾倒，任何人都无力回天。</p>
+<p>夏小强亦评价，从<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的讲话中可以看到，中共的大厦将倾倒，任何人都无力回天。</p>
 <p>他并指，大陆民众正在面临最为艰难的时刻，同时这也是黎明前最为黑暗的时刻。</p>
-<h2>病毒杀入 意大利封锁11城</h2>
-<p>病毒杀入意大利，令欧洲国家极为紧张。意大利疫情感染者数量持续暴增，至24日，确诊病例已突破150宗，并出现3宗死亡案例。为防堵疫情扩散，意大利政府22日已下令封锁意大利北部11座城镇，封城措施可能持续数周，波及人数超过5万。</p>
-<p>网传有愤怒的意大利人破坏意大利的中国餐厅和发型屋泄愤。</p>
-<p>较早前，中共官媒新华社制作系列“催泪”影片，以“我是中国人，不是病毒”为题，突显意大利人民信任和不歧视大陆人。</p>
-<p>影片中一个戴面具的中国女子或男子，手拿“我是中国人，不是病毒”的大字报，站在意大利城市中心广场“求抱抱”。影片中有路过的意大利行人上前拥抱该名中国人，行贴面礼甚至亲吻。</p>
-<p>在G7集团国中，意大利是到目前为止唯一与中共签署“一带一路”倡议备忘录的国家。武汉肺炎在欧洲的意大利率先大爆发，事情巧合，却并不出人意料。</p>
-<p>对于中共在意大利的大文宣以及随后该国的遭遇，有网友评论：</p>
-<p>“意大利人给中国信任和善意，但中国却给意大利带来了灾难！”</p>
-<p>“亲中（共）的国家现在看来都没有好下场。”</p>
-<p>“叫外国人不要歧视中国人，就先叫中国国内人不要歧视湖北武汉人啦！”</p>
 <h2>韩日患者在大陆以外最多</h2>
 <p>在亚洲，韩国及日本武汉肺炎患者继续暴增。韩国确诊病例持续攀升，截止24日上午，已有763宗确诊，死亡7人。韩国政府决定把疫情预警上调至最高级别的“严重”，并强化应对措施。</p>
 <p>香港24日向韩国发出红色外游警示，又宣布由25日早6时起，将不容许来自韩国、或者14天内到过韩国的非香港居民入境香港。而美、英等国已提升对韩国或韩国部分地区的旅游警示；台湾也将韩国旅游疫情建议提升至第三级“警示”，25日0时起入境台湾要“居家检疫14天”。</p>
@@ -39,12 +30,11 @@
 <p>武汉肺炎在中东持续扩散，24日巴林及科威特首度出现确诊个案。</p>
 <p>中东的伊朗，是目前大陆以外感染武汉肺炎死亡人数最多的国家。截至22日，伊朗通报确诊病例已有43人，死亡人数8人。伊朗卫生部长纳马基表示，感染源来自中国大陆。</p>
 <p>国际防疫形势骤现紧张。德国权威病毒学者表示，现在没有疫苗可用，短期内也无法研发出特效药，来自大陆的这种新型冠状病毒疫情在全球大流行恐怕难以避免。</p>
-<p>这场世纪大瘟疫，目前已波及全球30多个国家和地区，除了南美洲之外，各地都出现确诊病例，危及到全人类的生命健康和安全。目前，全球各国政府高度戒备，但疫情仍在不断蔓延扩散。</p>
+<p>这场世纪大瘟疫，目前已波及全球三十多个国家和地区，除了南美洲之外，各地都出现确诊病例，危及到全人类的生命健康和安全。目前，全球各国政府高度戒备，但疫情仍在不断蔓延扩散。</p>
 <h2>陶杰：疫情全球化是“神学问题”</h2>
 <p>素有“香江才子”之称的香港资深作家兼传媒人陶杰在CUP媒体发文说：“中国武汉肺炎形成全球瘟疫。祸不单行，南亚次大陆有4000亿蝗虫，枕待边境，随时向东北方向乌云盖顶，巨潮汹涌大扑杀。这是历史上的‘《圣经》时刻’。”</p>
 <p>陶杰解释，所谓《圣经》，指的是《旧约》中耶和华怒于亚当夏娃之后，人类的后裔腐朽堕落、贪婪、暴虐，决定予以严惩。天怒之处，伴随天谴，亿万蚁民，为容忍或参与暴虐，付出代价。</p>
 <p>陶杰指出，病毒源头，不论是由中国官方希望世人相信的“中国人屠食野生动物”，还是美国医疗专家所指“出自武汉实验室”；由宗教角度，中国武汉肺炎的全球化，最终是一个“神学问题”。</p>
-<p>陶杰引用台湾小说家王文兴对于上帝天谴问题的说法：“天主之适合于我，有若是‘对症下药’。我是这个‘症’，天主是‘药’。不论别人怎么怀疑祂，我从未怀疑。所以墨西哥的地震、哥伦比亚的火山劫难，听了，丝毫无动摇我对主的信仰。我相信，绝对相信，我的药。”</p>
 <h2>网传“代言死神”被隔离</h2>
 <p>武汉疫情下，在各国政府都呼吁大家尽量减少聚会的非常时期，日前网络上流出一段成龙、曾志伟、谭咏麟等香港艺人和警界高层聚餐的影片，他们公然与政府唱反调的行为被网友狠批。当日（2月18日）出席的数十名警察有的确诊感染病毒，有的（59名）需隔离检疫。</p>
 <p>22日下午，有网友发文表示“成龙疑似被隔离”。不过也有网友指有关消息是假的，表示确诊患者不是跟成龙在同一个饭局。</p>
@@ -54,45 +44,47 @@
 <p>责任编辑：连书华#</p>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/24/n11893305.htm">共产党亡党倒数时刻 习率政治局集体露面</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883841.htm">【新闻看点】中共驱逐美3记者 真正原因不说</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884778.htm">【拍案惊奇】复工企业现集体隔离 病毒或长存</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884891.htm">【十字路口】赚钱胜人命 中共急复工隐瞒疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dmoadz208/djy/blob/master/gb/20/2/24/n11893305.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dmoadz208/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dmoadz208/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11891634.md#1">田云: 习近平对疫情定性 最大动员会凸显危机</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11891392.md#1">高峰：中共把武汉防疫变成一场政治运动</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11891627.md#1">【一线采访】北京爆发疫情 实情被掩盖</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11890587.md#1">【拍案惊奇】武汉封城满月 习承认1949后最大公卫危机</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11890900.md#1">意大利确诊个案骤增 政府封城后再祭限娱令</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/23/n11890400.md#1">G20财长会议 聚焦新冠病毒对经济影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/23/n11890133.md#1">夏小强：习近平7常委露面 讲话透露重要信息</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/23/n11889921.md#1">习近平：疫情是中共执政以来最严重公卫事件</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">疫情影响无法开业 山东商户吁减租遭暴力抓捕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945316.md#1">疫情冲击 水果卖不出 批发市场用铲车倒掉</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944429.md#1">【直播回放】3.16新肺炎追踪：中共瞒疫情在美挨告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/24/n11893305.htm">疫情下面临严重危机  习率政治局集体露面</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/24/n11893305.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
